k8s-specifications/frontend/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: microservices-demo
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: us-central1-docker.pkg.dev/google-samples/microservices-demo/frontend:v0.10.3
          ports:
            - containerPort: 8080
