k8s-specifications/frontend/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: microservices-demo
  name: frontend
spec:
  selector:
    app: frontend
  ports:
    - port: 8080
      targetPort: 8080
